# generate_top

./: .gitignore  Cargo.toml
src/: main.rs
src/excel/: reader.rs  writer.rs
src/excel/test/: uart.xlsx
src/utils/: calculator.rs  mod.rs  solve_func.rs
src/verilog/: assign.rs  data.rs  error.rs  expression.rs  inst.rs  mod.rs  module.rs  parameter.rs  parse.rs  port.rs  width.rs  wire.rs  writer.rs
test/: npu_afifo_r.sv  std-7.1.6-primitives.v
