[package]
name = "generate_top"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
simple_logger = "5.0.0"
anyhow = "1.0.99"
strum = { version = "0.27", features = ["derive"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"]}
sv-parser = "0.13.3"
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] }
thiserror = "1.0.69"
walkdir = "2.5.0"
rust_xlsxwriter = "0.90.0"
calamine = "0.30.1"
regex = "1.11.2"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
